--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,13 @@
 security:
     encoders:
-        App\Entity\Users:
+        App\Entity\User:
             algorithm: auto
 
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\Users
+                class: App\Entity\User
 
                 property: username
     firewalls:
