--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.0",
+        "knplabs/knp-paginator-bundle": "^5.0",
         "mpdf/mpdf": "^8.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
