--- a/.env
+++ b/.env
@@ -24,6 +24,11 @@ APP_SECRET=e2cac7cd4d0a9abf1a11609992d7cb74
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
+###> twilio/sdk ###
+TWILIO_SID=
+TWILIO_TOKEN=
+TWILIO_NUMBER=
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
